@@ -50,6 +50,8 @@ General Fixes:
 - Argez now should be immune against all spells
 - Lord Hagen and Hymir shouldn't die in front of Player anymore
 - Skeleton Lord and Ghost of a Skeleton Lord now have two hand skill and deal much more damage
+- Plague quest of Saturas can't be skipped anymore
+- fixed three of the missing monsters for Monster Hunter achievement and cancelled the other missing three as they aren't implemented anywhere yet
 
 
 
